--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -27,12 +27,12 @@ a{
 
 //header
 .sn-header{
-  position: fixed;
+  position: relative;
   width: 100%;
   $height : 75px;
   height: $height;
   @include opacity(0.9);
-  z-index: 2;
+  z-index: 5;
   .logo{
     padding-top: 9px;
     img{
@@ -317,5 +317,38 @@ a{
       background: url("../images/float_layer/bg.jpg") no-repeat 0 -162px;
     }
   }
+}
 
+// 当前位置
+.sn-page-bar{
+  position: relative;
+  height: 110px;
+  .cloud{
+    height: 210px;
+    width: 100%;
+    position: absolute;
+    top: -100px;
+    z-index: 1;
+    background: url("../images/cloud.png") repeat-x center;
+  }
+  .sn-pb-content{
+    position: relative;
+    z-index: 3;
+    span{
+      font-size: 1.4rem;
+      color: $text-4;
+      margin-left: 6px;
+      &.active{
+        color: $text-9;
+      }
+      &>a{
+        font-size: 1.4rem;
+        color: $text-4;
+        @include transition(all ease .6s);
+        &:hover{
+          color: $text-9;
+        }
+      }
+    }
+  }
 }
