--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -20,6 +20,10 @@
 }
 
 //text
+.line-height-30{
+  line-height: 3rem;
+}
+
 .text-left{
   text-align: left;
 }
@@ -96,4 +100,27 @@
 }
 .margin-t-20{
   margin-top: 20px!important;
+}
+
+//居中
+@mixin center($width: null, $height: null) {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  @if not $width and not $height {
+    transform: translate(-50%, -50%);
+  } @else if $width and $height {
+    width: $width;
+    height: $height;
+    margin: -($width / 2) #{0 0} -($height / 2);
+  } @else if not $height {
+    width: $width;
+    margin-left: -($width / 2);
+    transform: translateY(-50%);
+  } @else {
+    height: $height;
+    margin-top: -($height / 2);
+    transform: translateX(-50%);
+  }
 }
