--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -9,7 +9,7 @@ $text-2:#231815;
 $text-3:#595758;
 $text-4:#B4B3B3;
 $text-5:#ffffff;
-$text-6:#E55927;
+$text-6:#FF6500;
 $text-7:#076BAF;
 $text-8:#1E79B5;
 $text-9:#29ABE2;
