--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -94,20 +94,38 @@ a{
       }
       .sub-menu{
         position: absolute;
-        background-color: $bg-color-2;
-        top: $height;
+        background-color: $text-5;
+        top: $height + 1;
         z-index: -1;
         display: none;
+        @include border-radius(1px);
         @include transition(all ease 0.3s);
         &.active{
           display: block;
         }
         li{
+          position: relative;
+          &:after{
+            content: '';
+            display: block;
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            width: 90%;
+            height: 1px;
+            margin: 0 auto;
+            border-bottom: 1px solid $border-color;
+          }
+          &:last-child:after{
+            border-bottom: none;
+          }
           a{
             font-size: 1.4rem;
+            margin: 0 auto;
             width: 115px;
-            height: 40px;
-            line-height: 40px;
+            height: 50px;
+            line-height: 50px;
             color: $text-3;
             display: block;
             @include transition(all ease 0.3s);
@@ -119,12 +137,13 @@ a{
         }
       }
       .sub-menu-group{
+        padding-top: 10px;
         position: absolute;
-        left: -180px;
-        top: $height;
+        left: 0px;
+        top: $height + 1;
         text-align: left;
-        width: 811px;
-        background-color: $bg-color-2;
+        width: 543px;
+        background-color: $text-5;
         @include transition(all ease 0.3s);
         display: none;
         &.active{
@@ -138,21 +157,36 @@ a{
           margin-bottom: 10px;
         }
         .sub-menu-item{
-          width: 270px;
+          //width: 270px;
           color: $text-3;
           line-height: 1.5;
           float: left;
           display: inline-block;
+          &:after{
+            content: '';
+            display: block;
+            position: absolute;
+            height: 80%;
+            top: 10%;
+            width: 1px;
+            background-color: $border-color;
+          }
           li{
-            padding: 5px 10px 5px 20px;
+            padding: 8px 40px;
             a,.sub-mi-desc{
               font-size: 1.4rem;
               color: $text-3;
               display: block;
             }
+            a{
+              font-weight: bolder;
+              font-size: 1.5rem;
+              color: $text-6;
+            }
             .sub-mi-title{
               font-size: 1.6rem;
-              color: $text-8;
+              color: $text-3;
+              font-weight: normal;
               margin-bottom: 5px;
             }
             @include transition(all ease 0.3s);
@@ -351,4 +385,11 @@ a{
       }
     }
   }
+}
+
+//公共大标题
+.sn-big-title{
+  font-size: 4rem;
+  color: $text-9;
+  font-weight: bolder;
 }
