over clock html

--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -32,6 +32,13 @@
 .font-size-20{
   font-size: 2rem!important;
 }
+//width
+.width-p-50{
+  width: 50%!important;
+}
+.width-p-100{
+  width: 100%!important;
+}
 
 //text
 .line-height-30{
@@ -116,6 +123,12 @@
 }
 .margin-t-20{
   margin-top: 20px!important;
+}
+.margin-t-50{
+  margin-top: 50px!important;
+}
+.margin-t-100{
+  margin-top: 100px!important;
 }
 .margin-l-10{
   margin-left: 10px!important;
