--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -20,3 +20,5 @@ $bg-color-2 : #E5E5E4;
 $bg-color-3 : #FBFBFC;
 $bg-color-4 : #f3f8f6;
 $bg-color-5 : #F4F7F5;
+
+$border-style: 1px solid $border-color;
