--- a/sass/font-awesome.scss
+++ b/sass/font-awesome.scss
@@ -25,6 +25,7 @@
  */
 
 @import "font-awesome/variables";
+$FontAwesomePath: "../fonts";
 @import "font-awesome/mixins";
 @import "font-awesome/path";
 @import "font-awesome/core";
