--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -108,6 +108,9 @@
 .color-black-4{
   color: $text-4!important;
 }
+.color-red{
+  color: $text-10!important;
+}
 
 .bg-white{
   background-color: $text-5;
