--- a/sass/_support.scss
+++ b/sass/_support.scss
@@ -72,6 +72,7 @@
     }
     .sm-fdf-btn{
       width: 120px;
+      cursor: pointer;
       height: 35px;
       line-height: 35px;
       color: $text-5;
