--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -13,6 +13,7 @@ $text-6:#FF6500;
 $text-7:#076BAF;
 $text-8:#1E79B5;
 $text-9:#29ABE2;
+$text-10:#FF0000;
 
 $border-color:#E6E6E5;
 $bg-color-1 : #fbf9fe;
