--- a/sass/_support.scss
+++ b/sass/_support.scss
@@ -100,3 +100,104 @@
     }
   }
 }
+
+//解决方案
+.sn-su-list{
+  li{
+    float: left;
+    width: 470px;
+    margin: 20px;
+    position: relative;
+    overflow: hidden;
+    @include transition(all ease .5s);
+    &:hover{
+      @include opacity(0.5);
+    }
+    &>img{
+      height: 240px;
+      position: relative;
+      left: -30%;
+    }
+    .sn-sul-title{
+      color: $text-5;
+      font-size: 3.6rem;
+      font-weight: bolder;
+      position: absolute;
+      top: 10px;
+      left: 20px;
+    }
+  }
+}
+.sn-su-footer{
+  position: relative;
+  &>img{
+    width: 100%;
+    height: 200px;
+  }
+  .sn-suf-content{
+      position: absolute;
+      top: 25px;
+      left: 0;
+      right: 0;
+      color: $text-5;
+      font-size: 3rem;
+      font-weight: bolder;
+      line-height: 70px;
+      .sn-suf-btn{
+        position: relative;
+        color: $text-8;
+        display: block;
+        background-color: $border-color;
+        height: 40px;
+        line-height: 40px;
+        width: 130px;
+        font-size: 1.8rem;
+        margin: 20px auto;
+        @include border-radius(50px);
+        @include transition(all 0.6s cubic-bezier(0.6, -0.21, 0, 1.6));
+        &:hover{
+          @include transform(scale(1.5));
+        }
+      }
+  }
+  .sn-suf-detail{
+    color: $text-3;
+    font-size: 1.8rem;
+    margin: 20px auto;
+    .sn-sufd-title{
+      margin: 20px 0;
+      text-align: center;
+      font-size: 3rem;
+    }
+  }
+}
+
+//通过解决方案页面样式
+.sn-common-list{
+  .sn-cl-item{
+    margin: 30px 0;
+  }
+  .sn-cli-title{
+    color: $text-3;
+    font-size: 2.4rem;
+    font-weight: bolder;
+    margin: 10px 0;
+  }
+  .sn-cli-desc{
+    color: $text-3;
+    font-size: 1.6rem;
+    white-space: pre-line;
+  }
+}
+.sn-bg-section{
+  position: relative;
+  .sn-bg-title{
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 30%;
+    color: $text-5;
+    font-weight: bolder;
+    font-size: 3rem;
+  }
+}
