--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -98,6 +98,28 @@ a{
         top: $height;
         z-index: -1;
         display: none;
+        .icon-angle-right{
+          position: absolute;
+          font-size: 2.4rem;
+          top: 11px;
+          right: 10px;
+        }
+        li>.sub-child-menu{
+          @extend  .sub-menu;
+          top: 0;
+          left: 100%;
+          li{
+            &:last-child:after{
+              border-bottom: none;
+            }
+            a {
+              &:hover {
+                color: $text-5;
+                background-color: $text-8;
+              }
+            }
+          }
+        }
         @include border-radius(1px);
         @include transition(all ease 0.3s);
         &.active{
