--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -73,6 +73,11 @@
       img{
         width: 96px;
       }
+      &.active{
+        a>p{
+          color: $text-6;
+        }
+      }
     }
   }
 }
