--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -164,7 +164,8 @@ a{
         left: 0px;
         top: $height;
         text-align: left;
-        width: 543px;
+        //width: 543px;
+        width: 565px;
         background-color: $text-5;
         @include transition(all ease 0.3s);
         display: none;
@@ -194,7 +195,11 @@ a{
             background-color: $border-color;
           }
           li{
-            padding: 8px 40px;
+            //padding: 8px 40px;
+            width: 187px;
+            height: 50px;
+            line-height: 50px;
+            text-align: center;
             a,.sub-mi-desc{
               font-size: 1.4rem;
               color: $text-3;
