--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -18,25 +18,24 @@
 .fr{
   float: right!important;
 }
-
 //font size
 .font-size-14{
-  font-size: 1.4rem!important;
+  font-size: 14px!important;
 }
 .font-size-16{
-  font-size: 1.6rem!important;
+  font-size: 16px!important;
 }
 .font-size-18{
-  font-size: 1.8rem!important;
+  font-size: 18px!important;
 }
 .font-size-20{
-  font-size: 2rem!important;
+  font-size: 20px!important;
 }
 .font-size-24{
-  font-size: 2.4rem!important;
+  font-size: 24px!important;
 }
 .font-size-30{
-  font-size: 3rem!important;
+  font-size: 30px!important;
 }
 //width
 .width-p-50{
@@ -57,7 +56,7 @@
   font-weight: bolder;
 }
 .line-height-30{
-  line-height: 3rem;
+  line-height: 30px;
 }
 
 .text-left{
