--- a/sass/_lock.scss
+++ b/sass/_lock.scss
@@ -6,7 +6,7 @@
     &>li,&>li>a{
       display: inline-block;
       float: left;
-      font-size: 1.8rem;
+      font-size: 18px;
       color: $text-9;
       padding: 5px 10px;
       @include transition(all ease .2s);
@@ -31,23 +31,23 @@
   }
   .sn-ld-section-title{
     color: $text-2;
-    font-size: 2rem;
+    font-size: 20px;
     font-weight: bolder;
   }
   .sn-ld-title{
     color: $text-2;
-    font-size: 2rem;
+    font-size: 20px;
     padding: 20px 0;
   }
   .sn-ld-desc{
     color: $text-3;
-    font-size: 1.6rem;
+    font-size: 16px;
     line-height: 2;
   }
   .sn-ld-feature{
     margin: 20px 0;
     color: $text-3;
-    font-size: 1.4rem;
+    font-size: 14px;
     line-height: 2.4;
   }
   .sn-ld-btn-list{
@@ -62,7 +62,7 @@
   }
   .sn-ld-btn{
     display: inline-block;
-    font-size: 2rem;
+    font-size: 20px;
     color: $text-5;
     -webkit-appearance: none;
     border: none;
@@ -109,7 +109,7 @@
         height: 35px;
         line-height: 35px;
         color: $text-3;
-        font-size: 1.4rem;
+        font-size: 14px;
         text-align: center;
       }
       tr{
@@ -127,7 +127,7 @@
       td{
         width: 50%;
         color: $text-3;
-        font-size: 1.4rem;
+        font-size: 14px;
         text-align: center;
         padding: 10px;
       }
@@ -143,7 +143,7 @@
         width: 50%;
         color: $text-3;
         display: inline-block;
-        font-size: 1.4rem;
+        font-size: 14px;
         text-align: center;
         float: left;
       }
@@ -157,7 +157,7 @@
     }
     td{
       color: $text-3;
-      font-size: 1.4rem;
+      font-size: 14px;
       height: 35px;
       line-height: 35px;
     }
@@ -167,7 +167,7 @@
     margin: 10px 0 20px;
     th,td{
       color: $text-3;
-      font-size: 1.4rem;
+      font-size: 14px;
       height: 35px;
       line-height: 35px;
       text-align: left;
@@ -194,7 +194,7 @@
     label,input{
       display: table-cell;
       color: $text-3;
-      font-size: 1.4rem;
+      font-size: 14px;
       outline: none;
       border: none;
     }
@@ -213,13 +213,14 @@
     resize: none;
     padding: 15px;
     margin: 20px 0;
-    font-size: 1.4rem;
+    font-size: 14px;
     color: $text-3;
     line-height: 1.6;
     outline: none;
     border: 1px solid $border-color;
   }
 }
+
 
 //试用及购买
 .sn-try-buy{
@@ -229,11 +230,11 @@
   input[type=text] {
     outline: none;
     color: $text-3;
-    font-size: 1.4rem;
+    font-size: 14px;
     border: $border-style;
   }
   color: $text-3;
-  font-size: 2rem;
+  font-size: 20px;
   .sn-tb-form{
     &>div{
       float: left;
@@ -283,7 +284,7 @@
       width: 90%;
       outline: none;
       height: 150px;
-      font-size: 1.4rem;
+      font-size: 14px;
       margin-top: 10px;
       padding: 10px;
       line-height: 2;
@@ -291,7 +292,7 @@
     }
   }
   .hint{
-    font-size: 1.4rem;
+    font-size: 14px;
   }
   .sn-tb-submit{
     width: 150px;
@@ -301,7 +302,7 @@
     color: $text-5;
     border: none;
     cursor: pointer;
-    font-size: 1.8rem;
+    font-size: 18px;
     background-color: $text-9;
     @include box-shadow(4px 4px 2px -1px $border-color);
   }
