--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -1,11 +1,11 @@
 html{
   font-family: Open Sans,Helvetica,Arial,sans-serif;
-  font-size:  62.5%;
+  //font-size:  62.5%;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
 body {
-  font-size: 1.4rem;
+  font-size: 14px;
   line-height: 1.6;
   color: $text-1;
   background-color: $text-5;
@@ -75,7 +75,7 @@ a{
       height: $height;
       line-height: $height;
       color: $text-1;
-      font-size: 1.6rem;
+      font-size: 16px;
       text-align: center;
       z-index: 1;
       &.bg-slide{
@@ -100,7 +100,7 @@ a{
         display: none;
         .icon-angle-right{
           position: absolute;
-          font-size: 2.4rem;
+          font-size: 24px;
           top: 11px;
           right: 10px;
         }
@@ -143,7 +143,7 @@ a{
             border-bottom: none;
           }
           a{
-            font-size: 1.4rem;
+            font-size: 14px;
             margin: 0 auto;
             width: 115px;
             height: 50px;
@@ -174,7 +174,7 @@ a{
         }
         .sub-mg-title{
           color: $text-3;
-          font-size: 1.6rem;
+          font-size: 16px;
           padding-left: 20px;
           line-height: 50px;
           margin-bottom: 10px;
@@ -201,23 +201,23 @@ a{
             line-height: 50px;
             text-align: center;
             a,.sub-mi-desc{
-              font-size: 1.4rem;
+              font-size: 14px;
               color: $text-3;
               display: block;
             }
             a{
               font-weight: bolder;
-              font-size: 1.5rem;
+              font-size: 15px;
               color: $text-6;
             }
             .sub-mi-title{
-              font-size: 1.6rem;
+              font-size: 14px;
               color: $text-3;
               font-weight: normal;
               margin-bottom: 5px;
             }
             @include transition(all ease 0.3s);
-            &:hover{
+            &:not(.disabled):hover{
               background-color: $text-8;
               a,div{
                 color: $text-5;
@@ -234,7 +234,7 @@ a{
   }
   .login{
     color: $text-9;
-    font-size: 1.3rem;
+    font-size: 13px;
     border: 1px solid $text-9;
     @include border-radius(2px);
     padding: 5px;
@@ -247,7 +247,7 @@ a{
   .sm-p-title{
     padding: 10px 0;
     color: $text-2;
-    font-size: 2rem;
+    font-size: 20px;
     font-weight: bolder;
   }
   .sm-p-list{
@@ -281,14 +281,14 @@ a{
       padding: 4px 18px;
       &.title{
         color: $text-3;
-        font-size: 1.4rem;
+        font-size: 14px;
         font-weight: bolder;
       }
       a{
         position: relative;
         left: 0;
         color: $text-3;
-        font-size: 1.4rem;
+        font-size: 14px;
         display: block;
         &>img{
           width: 18px;
@@ -307,7 +307,7 @@ a{
 .sn-footer{
   background-color: $text-1;
   color: $text-5;
-  font-size: 1.2rem;
+  font-size: 12px;
   padding: 10px 0;
   p{
     height: 25px;
@@ -396,14 +396,14 @@ a{
     position: relative;
     z-index: 3;
     span{
-      font-size: 1.4rem;
+      font-size: 14px;
       color: $text-4;
       margin-left: 6px;
       &.active{
         color: $text-9;
       }
       &>a{
-        font-size: 1.4rem;
+        font-size: 14px;
         color: $text-4;
         @include transition(all ease .6s);
         &:hover{
@@ -416,12 +416,12 @@ a{
 
 //公共大标题
 .sn-big-title{
-  font-size: 4rem;
+  font-size: 40px;
   color: $text-9;
   font-weight: bolder;
 }
 .sn-sub-title{
-  font-size: 1.4rem;
+  font-size: 14px;
   color: $text-3;
   line-height: 2;
 }
