--- a/sass/_we.scss
+++ b/sass/_we.scss
@@ -21,7 +21,7 @@
         }
       }
       .swi-desc{
-        font-size: 1.4rem;
+        font-size: 14px;
         color: $text-3;
         margin: 20px 0;
       }
@@ -52,14 +52,14 @@
         border-top: $border-style;
       }
       .icon-circle{
-        font-size: 1.2rem;
+        font-size: 12px;
         position: absolute;
         left: -20px;
         top: 26px;
         color: $text-9;
       }
       .sn-wlh-sort{
-        font-size: 1.6rem;
+        font-size: 16px;
         position: absolute;
         left: -25px;
         top: 23px;
@@ -70,7 +70,7 @@
         position: relative;
         .arrow{
           color: $text-4;
-          font-size: 2rem;
+          font-size: 20px;
           position: absolute;
           right: 10px;
           @include transition(all ease .3s);
@@ -80,14 +80,14 @@
           display: inline-block;
         }
         .sn-wlh-title{
-          font-size: 1.8rem;
+          font-size: 18px;
           color: $text-3;
           &.circle{
             content: '';
           }
         }
         .sn-wlh-time{
-          font-size: 1.6rem;
+          font-size: 16px;
           color: $text-4;
           float: right;
           margin-right: 40px;
@@ -97,8 +97,8 @@
         display: none;
         .sn-wr-ld-txt{
           color: $text-3;
-          font-size: 1.4rem;
-          line-height: 2rem;
+          font-size: 14px;
+          line-height: 2;
           padding: 0 20px 20px 0;
         }
         .sn-wr-ld-item{
@@ -117,7 +117,7 @@
           }
           &>span{
             color: $text-3;
-            font-size: 1.4rem;
+            font-size: 14px;
             &:first-child{
               font-weight: bolder;
             }
@@ -125,9 +125,9 @@
           .sn-wrli-content{
             margin-left: 75px;
             color: $text-3;
-            font-size: 1.4rem;
+            font-size: 14px;
             white-space: pre-line;
-            line-height: 2rem;
+            line-height: 20px;
           }
         }
       }
@@ -153,13 +153,13 @@
   padding-bottom: 50px;
   .sn-wen-title{
     color: $text-3;
-    font-size: 2.4rem;
+    font-size: 24px;
     font-weight: bolder;
     text-align: center;
   }
   .sn-wen-content{
     color: $text-3;
-    font-size: 1.6rem;
+    font-size: 16px;
     line-height: 2;
     white-space: pre-line;
   }
