--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -1,5 +1,5 @@
 html{
-  font-family: Open Sans,Helvetica,Arial,sans-serif;
+  font-family: Arial,Helvetica,sans-serif;
   //font-size:  62.5%;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
