update text once

--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -48,6 +48,10 @@
   min-height: 400px;
 }
 
+.position-fixed{
+  position: fixed!important;
+}
+
 //text
 .pre-line{
   white-space: pre-line!important;
