--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -385,6 +385,8 @@ a{
 .sn-page-bar{
   position: relative;
   height: 110px;
+  margin-top: 15px;
+
   .cloud{
     height: 210px;
     width: 100%;
