--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -1,7 +1,3 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- */
 @import "variables";
 @import "icons";
 
@@ -52,6 +48,9 @@
 .min-height-400{
   min-height: 400px;
 }
+.height-45{
+  height: 45px!important;
+}
 
 .position-fixed{
   position: fixed!important;
@@ -99,6 +98,9 @@
 .relative{
   position: relative!important;
 }
+.block{
+  display: block!important;
+}
 
 //color
 .color-orange{
@@ -127,7 +129,6 @@
   background-color: $text-5;
 }
 
-//border
 .border-top-grey{
   border-top: 1px solid $border-color;
 }
@@ -163,7 +164,6 @@
   margin-left: 20px!important;
 }
 
-//居中
 @mixin center($width: null, $height: null) {
   position: absolute;
   top: 50%;
