--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -96,13 +96,15 @@
   .sn-phcm-list{
     margin-top: 50px;
     width: 100%;
-    display: table;
     li{
-      display: table-cell;
+      display: block;
       width: 25%;
+      float: left;
       a{
+        display: block;
         color: $text-1;
-        &>p{
+        p{
+          color: $text-1;
           font-weight: bolder;
           font-size: 20px;
           line-height: 3;
@@ -191,6 +193,9 @@
   }
   .sn-wr-list{
     position: relative;
+    &>a{
+      @extend .clear-fix;
+    }
     .icon-self-time{
       position: absolute;
       top: -35px;
