--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -2,8 +2,6 @@ html{
   font-family: Arial,sans-serif;
   //font-family: 'Helvetica Neue',Arial,'Liberation Sans',FreeSans,'Hiragino Sans GB',sans-serif;;
   //font-size:  62.5%;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
 }
 body {
   font-size: 14px;
@@ -18,9 +16,7 @@ a{
     text-decoration: none;
   }
 }
-.container{
 
-}
 .wrap{
   width: 1024px;
   margin: 0 auto;
@@ -32,23 +28,29 @@ a{
   width: 100%;
   $height : 75px;
   height: $height;
-  @include opacity(0.9);
-  z-index: 5;
+  //@include opacity(0.9);
+  z-index: 10;
   .logo{
     padding-top: 9px;
     img{
+      float: left;
       display: inline-block;
     }
     &>img{
       height: 45px;
+      float: left;
       position: relative;
       top: 5px;
     }
     .logo-txt{
-      display: inline-block;
+      display: block;
+      position: relative;
+      float: left;
+      top: 10px;
        img{
          position: relative;
          left: 0;
+         float: left;
          width: 34px;
          height: 34px;
          @for $i from 1 through 4 {
@@ -70,7 +72,7 @@ a{
     margin-left: 30px;
     &>div{
       position: relative;
-      display: inline-block;
+      display: block;
       float: left;
       width: 115px;
       height: $height;
@@ -78,12 +80,12 @@ a{
       color: $text-1;
       font-size: 16px;
       text-align: center;
-      z-index: 1;
+      z-index: 10;
       &.bg-slide{
         position: absolute;
         top: 0;
         left: -115px;
-        z-index: 0;
+        z-index: 5;
         background-color: $bg-color-2;
       }
       a{
@@ -96,8 +98,10 @@ a{
       .sub-menu{
         position: absolute;
         background-color: $text-5;
+        @extend .clear-fix;
         top: $height;
-        z-index: -1;
+        left : 0;
+        z-index: 0;
         display: none;
         .icon-angle-right{
           position: absolute;
@@ -128,6 +132,8 @@ a{
         }
         li{
           position: relative;
+          height: 50px;
+          line-height: 50px;
           &:after{
             content: '';
             display: block;
@@ -162,10 +168,10 @@ a{
       .sub-menu-group{
         padding-top: 10px;
         position: absolute;
+        @extend .clear-fix;
         left: 0px;
         top: $height;
         text-align: left;
-        //width: 543px;
         width: 565px;
         background-color: $text-5;
         @include transition(all ease 0.3s);
@@ -181,11 +187,11 @@ a{
           margin-bottom: 10px;
         }
         .sub-menu-item{
-          //width: 270px;
+          @extend .clear-fix;
           color: $text-3;
           line-height: 1.5;
           float: left;
-          display: inline-block;
+          display: block;
           &:after{
             content: '';
             display: block;
@@ -218,10 +224,16 @@ a{
               margin-bottom: 5px;
             }
             @include transition(all ease 0.3s);
-            &:not(.disabled):hover{
+            &:hover{
               background-color: $text-8;
               a,div{
                 color: $text-5;
+              }
+            }
+            &.disabled{
+              background-color: $text-5;
+              a,div{
+                color: $text-3;
               }
             }
           }
@@ -303,19 +315,6 @@ a{
   }
 }
 
-
-//footer
-.sn-footer{
-  background-color: $text-1;
-  color: $text-5;
-  font-size: 12px;
-  padding: 10px 0;
-  p{
-    height: 25px;
-    line-height: 25px;
-  }
-}
-
 //浮层menu
 .sn-fix-menu{
   width: 64px;
@@ -324,9 +323,14 @@ a{
   position: fixed;
   bottom: 100px;
   right: 0;
+  text-align: center;
   z-index: 10;
   .mask{
     position: absolute;
+    top: 0 ;
+    *top: -8px;
+    left: 0;
+    right: 0;
     width: 64px;
     height: 256px;
     @include opacity(0.5);
@@ -334,10 +338,10 @@ a{
     z-index: -1;
   }
   &>a{
-    margin: 8px 5px ;
     width: 54px;
     height: 54px;
     display: block;
+    margin: 8px auto;
     &.qq{
       width: 54px;
       height: 54px;
@@ -391,6 +395,8 @@ a{
     height: 110px;
     width: 100%;
     position: absolute;
+    left: 0;
+    right: 0;
     top: -100px;
     z-index: 1;
     background: url("../images/cloud_down.png") repeat-x center;
@@ -428,8 +434,15 @@ a{
   color: $text-2;
   line-height: 2;
 }
-//渐变背景
-.sn-blue-bg{
-  height: 400px;
-  @include background(linear-gradient('top',$text-9,$text-5));
+
+//footer
+.sn-footer{
+  background-color: $text-1;
+  color: $text-5;
+  font-size: 12px;
+  padding: 10px 0;
+  p{
+    height: 25px;
+    line-height: 25px;
+  }
 }
