--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,18 +1,52 @@
 
 //轮播图
-.sn-swiper-item{
-  background-color: $bg-color-4;
-  .sn-si-title{
+.sn-slide-section{
+  width: 100%;
+  text-align: center;
+  .bx-wrapper{
+    margin: 0 auto;
+    .bx-viewport{
+      border: 0!important;
+      li{
+        left: 0;
+        right:  0;
+      }
+    }
+    .bx-pager,.bx-controls-auto{
+      left: 0;
+      right: 0;
+      bottom: 10px;
+    }
+    .bx-controls-direction a{
+      &,&:hover{
+        width: 70px;
+        height: 70px;
+        margin-top: -35px;
+        background-position: center;
+      }
+    }
+    .bx-prev{
+      background: url(../images/pre_btn.png) no-repeat center;
+    }
+    .bx-next{
+      background: url(../images/next_btn.png) no-repeat center;
+    }
+  }
+  .bx-page{
+    bottom: 0!important;
+  }
+  .sn-swiper-item{
     position: absolute;
+    *position: relative;
     top: 50%;
-    width: 1024px;
     left: 0;
     right: 0;
+    width: 1024px;
     text-align: left;
     font-size: 20px;
     color: $text-5;
-    margin: 0 auto;
-    @include transform(translateY(-50%));
+    margin: -93px auto 0;
+
     &>p{
       width: 270px;
       &:first-child{
@@ -31,54 +65,59 @@
       border: 1px solid $text-5;
     }
   }
-  &>img{
-    width: 100%;
-  }
 }
 
-.sn-partners-slide{
-  //margin: 40px auto!important;
-  padding: 0 50px;
-  position: relative;
-  &:before,
-  &:after{
-    content: '';
-    display: inline-block;
-    position: absolute;
-    top: 0;
-    z-index: 3;
-    width: 50px;
-    height: 100%;
-    background-color: white;
+.sn-partners{
+  .sm-p-title{
+    margin: 10px 0 50px;
+    color: #333;
+    font-size: 24px;
+    font-weight: bolder;
   }
-  &:before{
-    left: 0;
-  }
-  &:after{
-    right: 0;
-  }
-  .sn-swiper-item-2{
-    a{
-      display: inline-block;
-      width: 180px;
+  .sn-partners-slide{
+    //margin: 40px auto!important;
+    padding: 0 50px;
+    position: relative;
+    .bx-wrapper{
+      margin: 0 auto;
+      .bx-viewport{
+        box-shadow: none;
+        border: 0!important;
+        li{
+          left: 0;
+          right:  0;
+        }
+      }
+      .bx-pager,.bx-controls-auto{
+        left: 0;
+        right: 0;
+        bottom: 10px;
+      }
+      .bx-controls-direction a{
+        &,&:hover{
+          width: 70px;
+          height: 70px;
+          margin-top: -35px;
+          background-position: center;
+        }
+      }
+      .bx-prev{
+        left: -70px;
+        background: url(../images/pre_btn.png) no-repeat center;
+      }
+      .bx-next{
+        right: -70px;
+        background: url(../images/next_btn.png) no-repeat center;
+      }
     }
-    img{
-      height: 60px;
+    .sn-partners-item{
+      display: block;
+      text-align: center;
+      img{
+        height: 70px;
+        margin: 0 auto;
+      }
     }
-  }
-}
-
-.swiper-button-prev.sn-pre-btn,
-.swiper-button-next.sn-next-btn
-{
-  width: 70px;
-  height: 70px;
-  @include background-size(70px 70px);
-  &.sn-pre-btn{
-    background: url("../images/pre_btn.png") no-repeat center;
-  }
-  &.sn-next-btn{
-    background: url("../images/next_btn.png") no-repeat center;
   }
 }
 
@@ -193,6 +232,7 @@
   }
   .sn-wr-list{
     position: relative;
+    margin-bottom: 50px;
     &>a{
       @extend .clear-fix;
     }
@@ -203,13 +243,16 @@
       width: 32px;
       height: 32px;
       background: url("../images/time.png") no-repeat center;
+      *background: none;
       @include background-size(32px 32px);
+      filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(
+                      src='../images/time.png',
+                      sizingMethod='scale');
     }
-    &:before{
-      content: '';
+    .sn-through-line{
       position: absolute;
       left: 187px;
-      display: inline-block;
+      display: block;
       width: 1px;
       height: 100%;
       border-right: 1px solid $border-color;
@@ -228,22 +271,25 @@
     .sn-wr-item{
       position: relative;
       margin: 10px 40px;
-      &:before{
-        content: attr(data-group);
+      .title{
         color: $text-6;
         font-size: 30px;
         display: block;
+        margin-left: 0;
       }
-      &:after{
-        content: '';
-        display: inline-block;
+      .sn-wr-arrow{
+        display: block;
         position: absolute;
         top: 7px;
         left: 105px;
         width: 32px;
         height: 32px;
         background: url("../images/arrow_down.png") no-repeat center;
+        *background: none;
         @include background-size(32px 32px);
+        filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(
+                        src='../images/arrow_down.png',
+                        sizingMethod='scale');
       }
       &>li{
         position: relative;
@@ -251,9 +297,8 @@
         font-size: 16px;
         color: $text-2;
         padding: 5px 0;
-        &:before{
-          content: '';
-          display: inline-block;
+        .prefix-short-line{
+          display: block;
           position: absolute;
           left: -40px;
           top: 15px;
