--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -25,6 +25,9 @@ a{
 //header
 .sn-header{
   position: relative;
+  top: 0;
+  left: 0;
+  right: 0;
   width: 100%;
   $height : 75px;
   height: $height;
