--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -37,17 +37,15 @@
   }
   .sn-swiper-item{
     position: absolute;
-    *position: relative;
     top: 50%;
+    margin-top: -93px;
     left: 0;
     right: 0;
-    width: 1024px;
-    text-align: left;
+    text-align: center;
     font-size: 20px;
     color: $text-5;
-    margin: -93px auto 0;
-
-    &>p{
+    width: 100%;
+    p{
       width: 270px;
       &:first-child{
         font-size: 30px;
