--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -10,6 +10,9 @@
       li{
         left: 0;
         right:  0;
+        img{
+          width: 100%;
+        }
       }
     }
     .bx-pager,.bx-controls-auto{
