--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -31,14 +31,18 @@ a{
   width: 100%;
   $height : 75px;
   height: $height;
-  //@include opacity(0.9);
+  opacity:  0.9;
+  *opacity:1;
   z-index: 10;
   .logo_a{
+    @extend .clear-fix;
+    cursor: pointer;
     display: block;
     float: left;
     height: 70px;
   }
   .logo{
+    @extend .clear-fix;
     padding-top: 9px;
     img{
       float: left;
