--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -35,11 +35,14 @@ a{
   *opacity:1;
   z-index: 10;
   .logo_a{
-    @extend .clear-fix;
     cursor: pointer;
     display: block;
+    width: 205px;
+    *display: inline;
+    zoom: 1;
     float: left;
     height: 70px;
+    line-height: 70px;
   }
   .logo{
     @extend .clear-fix;
